Flatpak: Make sure we release every time we aquire

Otherwise it sometimes won't ever finish to update

BUG: 394558